# rust-template

./: .tag.toml  README.md  Taskfile.yml  conftest.py  copier.yml  pyproject.toml
.github/workflows/: CI.yml
template/: Cargo.toml.jinja  README.md.jinja
template/.github/workflows/: CI.yml.jinja  {% if project_type == 'binary' %}release.yml{% endif %}.jinja  {% if project_type == 'library' %}release.yml{% endif %}.jinja
template/src/: {% if project_type == 'library' %}lib.rs{% endif %}.jinja
tests/: test_template.py
